Update Umbraco Cloud Identity settings

--- a/Web.config
+++ b/Web.config
@@ -51,6 +51,10 @@
     <add key="Umbraco.Core.VersionCheckPeriod" value="0" />
     <add key="UmbracoLicensesDirectory" value="~/App_Plugins/UmbracoLicenses/" />
     <add key="Umbraco.Core.DisableElectionForSingleServer" value="true" />
+    <add key="Umbraco.Cloud.Identity.ClientId" value="0297c0f6-83ad-4481-9ae2-07a3f5475333" />
+    <add key="Umbraco.Cloud.Identity.ClientSecret" value="Q5~T526ixOHlj47lg7Mu7_.zN1fK.7ua.9" />
+    <add key="Umbraco.Cloud.Identity.RedirectUri" value="https://redirect.identity.umbraco.com" />
+    <add key="Umbraco.Cloud.Identity.EnvironmentId" value="7c72be8d-3b80-424e-b3c2-fc947a6394ef" />
   </appSettings>
   <!--
         Important: if you're upgrading Umbraco, do not clear the connectionString/providerName during your Web.config merge.
