Update Umbraco Deploy api key

--- a/Web.config
+++ b/Web.config
@@ -55,6 +55,7 @@
     <add key="Umbraco.Cloud.Identity.ClientSecret" value="Q5~T526ixOHlj47lg7Mu7_.zN1fK.7ua.9" />
     <add key="Umbraco.Cloud.Identity.RedirectUri" value="https://redirect.identity.umbraco.com" />
     <add key="Umbraco.Cloud.Identity.EnvironmentId" value="7c72be8d-3b80-424e-b3c2-fc947a6394ef" />
+    <add key="Umbraco.Deploy.ApiKey" value="685F41B6F3254CE07745BED97D4BDE197D8F2BE7" />
   </appSettings>
   <!--
         Important: if you're upgrading Umbraco, do not clear the connectionString/providerName during your Web.config merge.
